<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="
          http://maven.apache.org/POM/4.0.0
          http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <!-- Project Object Model -->
    <!-- All POMs extend the Super POM unless explicitly set -->
    <!--<parent>*</parent>-->

    <groupId>ru.otus</groupId>
    <artifactId>otus-java-homeworks-kvloginov</artifactId>
    <version>2019-09-SNAPSHOT</version>
    <dependencies>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>1.7.25</version>
        </dependency>
    </dependencies>

    <packaging>pom</packaging>

    <developers>
        <developer>
            <name>Konstantin Loginov</name>
        </developer>
    </developers>

    <modules>
        <module>HW01-maven</module>
        <module>HW02-diy-arraylist</module>
        <module>HW03-gc</module>
        <module>HW04-magic-logger</module>
        <module>HW-05-test-framework</module>
        <module>HW06-atm-emulator</module>
        <module>HW07-atm-department</module>
        <module>HW-09-orm</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>13</maven.compiler.source>
        <maven.compiler.target>13</maven.compiler.target>
        <com.google.guava.version>28.1-jre</com.google.guava.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.google.guava</groupId>
                <artifactId>guava</artifactId>
                <version>${com.google.guava.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-assembly-plugin</artifactId>
                    <version>3.1.1</version>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>